<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_gravity="top" android:orientation="vertical" android:background="@drawable/bgdialog" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="10dp" android:layout_marginRight="10dp" android:layout_marginBottom="50dp">
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
        <TextView android:id="@+id/dialogtitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/settingtitle"/>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="5">
        <LinearLayout android:gravity="bottom" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="0.5">
            <TextView android:id="@+id/distanceunit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/distanceunittitle"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
            <CheckBox android:id="@+id/me" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="m"/>
            <CheckBox android:id="@+id/ft" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="ft"/>
            <CheckBox android:id="@+id/yd" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="yd"/>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
            <LinearLayout android:gravity="bottom" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="0.5">
                <TextView android:id="@+id/inputheight" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/inputheighttitle"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
                <EditText android:id="@+id/inputdistanceedit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/typehint" android:ems="10" android:maxLength="12" android:digits="0123456789." android:inputType="numberDecimal">
                    <requestFocus/>
                </EditText>
                <TextView android:id="@+id/unit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text=""/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
        <LinearLayout android:orientation="horizontal" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1">
            <Button android:id="@+id/ok" android:layout_width="0dp" android:layout_height="wrap_content" android:text="Ok" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"/>
        <LinearLayout android:orientation="horizontal" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1">
            <Button android:id="@+id/cancel" android:layout_width="0dp" android:layout_height="wrap_content" android:text="Cancel" android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
